--- a/business-partner/business-partner.page.scss
+++ b/business-partner/business-partner.page.scss
@@ -6,3 +6,39 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+ion-grid.merge-modal ion-row{
+    min-height:50px;
+}
+.merge-row {
+    min-height: 50px;
+    align-content: center;
+    ion-item{
+        width:300px !important; 
+    }
+    ion-radio-group{
+        display:flex;
+        ion-radio{
+            padding-left:20px;
+            border-radius: 50px;
+        }
+        ion-radio.radio-checked {
+            background:var(--ion-color-primary, #3880ff);
+            border-color: transparent;
+            color:white;
+        
+          }
+          ion-radio:not(.radio-checked) {
+            background:#ffffff;
+            color:black;
+            border-color: transparent;
+          }
+        
+        ion-avatar{
+            margin:0 auto;
+        }
+    }
+}
+
+  
+ 
