--- a/business-partner-detail/components/bp-contact-point/bp-contact-point.component.html
+++ b/business-partner-detail/components/bp-contact-point/bp-contact-point.component.html
@@ -3,18 +3,18 @@
 		<ion-row class="hr-group">
 			<ion-col size="12" size-sm="12" size-md="12" size-xl="3">
 				<ion-list-header class="ion-no-padding">
-					<ion-label color="primary">{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.contact' | translate}}</ion-label>
+					<ion-label color="primary">{{'Contact point' | translate}}</ion-label>
 				</ion-list-header>
 			</ion-col>
 			<ion-col size="12" size-sm size-xl="8">
 				<div class="table-contain">
 					<section class="table">
 						<header class="bold" style="padding-right: 0;">
-							<div class="col-name cell">{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.name' | translate}}</div>
-							<div class="col-title cell">{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.title' | translate}}</div>
-							<div class="col-phone cell">{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.workphone' | translate}}</div>
-							<div class="col-dob cell">{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.dob' | translate}}</div>
-							<div class="col-gender cell">{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.gender' | translate}}</div>
+							<div class="col-name cell">{{'Full name' | translate}}</div>
+							<div class="col-title cell">{{'Title' | translate}}</div>
+							<div class="col-phone cell">{{'Telephone' | translate}}</div>
+							<div class="col-dob cell">{{'Date of birth' | translate}}</div>
+							<div class="col-gender cell">{{'Genders' | translate}}</div>
 							<!-- <div class="col-checkbox cell"></div> -->
 							<div class="col-checkbox cell" *ngIf="pageConfig.canEdit"></div>
 						</header>
@@ -36,8 +36,8 @@
 										</div>
 										<div class="col-gender cell">
 											<select class="c-input c-dropdown" [attr.disabled]="!pageConfig.canEdit?'':null" (change)="saveContact(c)" formControlName="Gender">
-												<option [value]="true">{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.male' | translate}}</option>
-												<option [value]="false">{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.female' | translate}}</option>
+												<option [value]="true">{{'Male' | translate}}</option>
+												<option [value]="false">{{'Female' | translate}}</option>
 											</select>
 										</div>
 									</ng-container>
@@ -50,15 +50,15 @@
 						</ng-container>
 						<div *ngIf="pageConfig.canEdit" class="row footer">
 							<div class="cell">
-								<ng-select class="c-input" [readonly]="submitAttempt" (change)="selectContact($event)" [addTag]="addContactLine.bind(this)" appendTo="#selectholder" [items]="contactList$ | async" [typeahead]="contactListInput$" [loading]='contactListLoading' [virtualScroll]="true" placeholder="{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.add-contact-point-placeholder' | translate}}">
+								<ng-select class="c-input" [readonly]="submitAttempt" (change)="selectContact($event)" [addTag]="addContactLine.bind(this)" appendTo="#selectholder" [items]="contactList$ | async" [typeahead]="contactListInput$" [loading]='contactListLoading' [virtualScroll]="true" placeholder="{{'Add contacts (search name, code or phone number)' | translate}}">
 									<ng-template ng-option-tmp let-i="item" let-search="searchTerm">
 										<div *ngIf="i">
 											<div><span [ngOptionHighlight]="search">{{i.Name}}</span></div>
-											<small>#<b><span class="important" [ngOptionHighlight]="search">{{i.Id}}</span></b> <span *ngIf="i.Title"> - {{i.Title}}</span> <span *ngIf="i.WorkPhone"> | {{'erp.app.pages.crm.business-partner-detail.bp-contact-point.workphone' | translate}}: <b [ngOptionHighlight]="search">{{i.WorkPhone}}</b></span></small>
+											<small>#<b><span class="important" [ngOptionHighlight]="search">{{i.Id}}</span></b> <span *ngIf="i.Title"> - {{i.Title}}</span> <span *ngIf="i.WorkPhone"> | {{'Telephone' | translate}}: <b [ngOptionHighlight]="search">{{i.WorkPhone}}</b></span></small>
 										</div>
 									</ng-template>
 									<ng-template ng-tag-tmp let-search="searchTerm">
-										<b>{{'erp.app.pages.crm.business-partner-detail.bp-contact-point.add-new' | translate}}</b>: {{search}}
+										<b>{{'Add new/ Change name' | translate}}</b>: {{search}}
 									</ng-template>
 								</ng-select>
 							</div>
