--- a/business-partner-detail/components/bp-outlet-info/bp-outlet-info.component.html
+++ b/business-partner-detail/components/bp-outlet-info/bp-outlet-info.component.html
@@ -3,16 +3,16 @@
 	<ion-row class="hr-group border">
 		<ion-col size="12" size-sm="12" size-md="12" size-xl="3">
 			<ion-list-header class="ion-no-padding">
-				<ion-label color="primary">{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.page-title' | translate}}</ion-label>
+				<ion-label color="primary">{{'Outlets classification' | translate}}</ion-label>
 			</ion-list-header>
 		</ion-col>
 		<ion-col size="12" size-sm="6" size-xl="4">
 			<!-- Type -->
 			<div class="c-control">
-				<label class="c-label" for="Type">{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.type' | translate}}
+				<label class="c-label" for="Type">{{'Consumption channel' | translate}}
 					<span *ngIf="!formGroup.controls.Type.valid && !formGroup.controls.Type.pending && (formGroup.controls.Type.dirty || submitAttempt)" ion-text color="danger">(*)</span>
 				</label>
-				<ng-select class="c-input" (change)="saveChange();" labelForId="Type" formControlName="Type" [items]="TypeSource" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.search-placeholder' | translate}}">
+				<ng-select class="c-input" (change)="saveChange();" labelForId="Type" formControlName="Type" [items]="TypeSource" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'Search' | translate}}">
 					<ng-template ng-option-tmp let-i="item" let-search="searchTerm">
 						<div *ngIf="i">
 							<div> <span *ngFor="let l of i.levels">&nbsp;&nbsp;&nbsp;</span> <span [ngOptionHighlight]="search">{{i.Name}}</span></div>
@@ -22,10 +22,10 @@
 			</div>
 			<!-- Location -->
 			<div class="c-control">
-				<label class="c-label" for="Location">{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.location' | translate}}
+				<label class="c-label" for="Location">{{'Operating location' | translate}}
 					<span *ngIf="!formGroup.controls.Location.valid && !formGroup.controls.Location.pending && (formGroup.controls.Location.dirty || submitAttempt)" ion-text color="danger">(*)</span>
 				</label>
-				<ng-select class="c-input" (change)="saveChange();" labelForId="Location" formControlName="Location" [items]="LocationSource" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.search-placeholder' | translate}}">
+				<ng-select class="c-input" (change)="saveChange();" labelForId="Location" formControlName="Location" [items]="LocationSource" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'Search' | translate}}">
 					<ng-template ng-option-tmp let-i="item" let-search="searchTerm">
 						<div *ngIf="i">
 							<div> <span *ngFor="let l of i.levels">&nbsp;&nbsp;&nbsp;</span> <span [ngOptionHighlight]="search">{{i.Name}}</span></div>
@@ -35,10 +35,10 @@
 			</div>
 			<!-- BusinessType -->
 			<div class="c-control">
-				<label class="c-label" for="BusinessType">{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.business-type' | translate}}
+				<label class="c-label" for="BusinessType">{{'Business type' | translate}}
 					<span *ngIf="!formGroup.controls.BusinessType.valid && !formGroup.controls.BusinessType.pending && (formGroup.controls.BusinessType.dirty || submitAttempt)" ion-text color="danger">(*)</span>
 				</label>
-				<ng-select class="c-input" (change)="saveChange();" labelForId="BusinessType" formControlName="BusinessType" [items]="BusinessTypeSource" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.search-placeholder' | translate}}">
+				<ng-select class="c-input" (change)="saveChange();" labelForId="BusinessType" formControlName="BusinessType" [items]="BusinessTypeSource" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'Search' | translate}}">
 					<ng-template ng-option-tmp let-i="item" let-search="searchTerm">
 						<div *ngIf="i">
 							<div> <span *ngFor="let l of i.levels">&nbsp;&nbsp;&nbsp;</span> <span [ngOptionHighlight]="search">{{i.Name}}</span></div>
@@ -48,10 +48,10 @@
 			</div>
 			<!-- PopulationDistribution -->
 			<div class="c-control">
-				<label class="c-label" for="PopulationDistribution">{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.population-distribution' | translate}}
+				<label class="c-label" for="PopulationDistribution">{{'Population distribution' | translate}}
 					<span *ngIf="!formGroup.controls.PopulationDistribution.valid && !formGroup.controls.PopulationDistribution.pending && (formGroup.controls.PopulationDistribution.dirty || submitAttempt)" ion-text color="danger">(*)</span>
 				</label>
-				<ng-select class="c-input" (change)="saveChange();" labelForId="PopulationDistribution" formControlName="PopulationDistribution" [items]="PopulationDistributionSource" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.search-placeholder' | translate}}">
+				<ng-select class="c-input" (change)="saveChange();" labelForId="PopulationDistribution" formControlName="PopulationDistribution" [items]="PopulationDistributionSource" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'Search' | translate}}">
 					<ng-template ng-option-tmp let-i="item" let-search="searchTerm">
 						<div *ngIf="i">
 							<div> <span *ngFor="let l of i.levels">&nbsp;&nbsp;&nbsp;</span> <span [ngOptionHighlight]="search">{{i.Name}}</span></div>
@@ -63,10 +63,10 @@
 		<ion-col size="12" size-sm="6" size-xl="4">
 			<!-- CustomersAccess -->
 			<div class="c-control">
-				<label class="c-label" for="CustomersAccess">{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.customer-access' | translate}}
+				<label class="c-label" for="CustomersAccess">{{'Access of customers' | translate}}
 					<span *ngIf="!formGroup.controls.CustomersAccess.valid && !formGroup.controls.CustomersAccess.pending && (formGroup.controls.CustomersAccess.dirty || submitAttempt)" ion-text color="danger">(*)</span>
 				</label>
-				<ng-select class="c-input" (change)="saveChange();" labelForId="CustomersAccess" formControlName="CustomersAccess" [items]="CustomersAccessSource" [virtualScroll]="true" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.search-placeholder' | translate}}">
+				<ng-select class="c-input" (change)="saveChange();" labelForId="CustomersAccess" formControlName="CustomersAccess" [items]="CustomersAccessSource" [virtualScroll]="true" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'Search' | translate}}">
 					<ng-template ng-option-tmp let-i="item" let-search="searchTerm">
 						<div *ngIf="i">
 							<div> <span *ngFor="let l of i.levels">&nbsp;&nbsp;&nbsp;</span> <span [ngOptionHighlight]="search">{{i.Name}}</span></div>
@@ -76,10 +76,10 @@
 			</div>
 			<!-- Display -->
 			<div class="c-control">
-				<label class="c-label" for="Display">{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.display' | translate}}
+				<label class="c-label" for="Display">{{'Samples' | translate}}
 					<span *ngIf="!formGroup.controls.Display.valid && !formGroup.controls.Display.pending && (formGroup.controls.Display.dirty || submitAttempt)" ion-text color="danger">(*)</span>
 				</label>
-				<ng-select class="c-input" (change)="saveChange();" labelForId="Display" formControlName="Display" [items]="DisplaySource" [virtualScroll]="true" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.search-placeholder' | translate}}">
+				<ng-select class="c-input" (change)="saveChange();" labelForId="Display" formControlName="Display" [items]="DisplaySource" [virtualScroll]="true" bindLabel="Name" bindValue="Code" [searchFn]="searchShowAllChildren" placeholder="{{'Search' | translate}}">
 					<ng-template ng-option-tmp let-i="item" let-search="searchTerm">
 						<div *ngIf="i">
 							<div> <span *ngFor="let l of i.levels">&nbsp;&nbsp;&nbsp;</span> <span [ngOptionHighlight]="search">{{i.Name}}</span></div>
@@ -89,7 +89,7 @@
 			</div>
 			<!-- Remark -->
 			<div class="c-control">
-				<label class="c-label" for="Remark">{{'erp.app.pages.crm.business-partner-detail.bp-outlet-info.remark' | translate}}
+				<label class="c-label" for="Remark">{{'Remark' | translate}}
 					<span *ngIf="!formGroup.controls.Remark.valid && !formGroup.controls.Remark.pending && (formGroup.controls.Remark.dirty || submitAttempt)" ion-text color="danger">(*)</span>
 				</label>
 				<textarea rows="3" class="c-input" (change)="saveChange();" id="Remark" formControlName="Remark" type="textarea"></textarea>
