--- a/business-partner-detail/components/bp-reference-code/bp-reference-code.component.html
+++ b/business-partner-detail/components/bp-reference-code/bp-reference-code.component.html
@@ -2,15 +2,15 @@
 	<ion-row class="hr-group">
 		<ion-col size="12" size-sm="12" size-md="12" size-xl="3">
 			<ion-list-header class="ion-no-padding">
-				<ion-label color="primary">{{'erp.app.pages.crm.business-partner-detail.bp-reference-code.page-title' | translate}}</ion-label>
+				<ion-label color="primary">{{'Reference code' | translate}}</ion-label>
 			</ion-list-header>
 		</ion-col>
 		<ion-col size="12" size-sm size-xl="8">
 			<div class="table-contain">
 				<section class="table">
 					<header class="bold">
-						<div class="col-name cell">{{'erp.app.pages.crm.business-partner-detail.bp-reference-code.vendor' | translate}}</div>
-						<div class="col-code cell">{{'erp.app.pages.crm.business-partner-detail.bp-reference-code.code' | translate}}</div>
+						<div class="col-name cell">{{'Vendor' | translate}}</div>
+						<div class="col-code cell">{{'Code' | translate}}</div>
 					</header>
 					<ng-container formArrayName="ContactReferences">
 						<div class="row" [ngClass]="{odd: j % 2 != 0 }" *ngFor="let ref of formGroup.get('ContactReferences')['controls']; let j=index">
