--- a/business-partner-detail/components/bp-items/bp-items.component.html
+++ b/business-partner-detail/components/bp-items/bp-items.component.html
@@ -14,7 +14,7 @@
 					{{ 'Import product' | translate }}
 				</ion-button>
 				<ion-button fill="clear" size="small" (click)="export()">
-					<ion-icon slot="start" name="cloud-upload"></ion-icon>
+					<ion-icon slot="start" name="cloud-download"></ion-icon>
 					{{ 'Export product' | translate }}
 				</ion-button>
 				<ion-button fill="clear" size="small" (click) ='nav("/price-list/"+idPriceList,"forward")'>
