--- a/attendance-booking/attendance-booking.page.scss
+++ b/attendance-booking/attendance-booking.page.scss
@@ -2,7 +2,7 @@
 	app-data-table{
 
 		.col-remark {
-			min-width: 300px;
+			min-width: 370px;
 			max-width: 100%;
 		}
 		.phone {
@@ -21,7 +21,7 @@
 		.cell {
 			white-space: normal !important;
 		}
-		.remark {
+		.col-remark {
 			white-space: pre-line !important;
 		}
 		.col-number {
