--- a/business-partner-detail/business-partner-detail.page.scss
+++ b/business-partner-detail/business-partner-detail.page.scss
@@ -2,17 +2,20 @@
 	justify-content: center;
 	display: flex;
 	text-align: center;
-
+	.avatar {
+		padding-left: 8px;
+		padding-right: 8px;
+	}
 	img {
 		border-radius: 6px;
 		width: 100%;
 		max-width: 200px;
-		margin: 0 32px;
-		margin-bottom: 50px;
-		padding: 16px;
+		// margin: 0 32px;
+		// margin-bottom: 50px;
 		border: solid 3px var(--ion-color-primary);
-		background-color: white;
+		border-radius: 50%;
 
+		background-color: white;
 		box-shadow:
 			0 7px 14px 0 rgba(85, 110, 145, 0),
 			0 1px 3px 0 rgba(0, 0, 0, 0.1),
@@ -29,11 +32,13 @@
 .full-screen {
 	min-height: calc(100vh - 385px);
 }
-::ng-deep {
-	ion-modal {
-		--width: 80% !important;
-		--height: 600px;
-	}
+.smallZoom {
+	zoom: 0.9;
 }
-#s2 {
+.mt-0 {
+	margin-top: 0;
+}
+ion-reorder-group {
+	display: flex;
+	flex-direction: column;
 }
