--- a/business-partner-detail/components/bp-items/bp-items.component.html
+++ b/business-partner-detail/components/bp-items/bp-items.component.html
@@ -1,82 +1,86 @@
-<form [formGroup]="formGroup">
-	<ion-row class="hr-group">
-		<ion-col size="12" size-sm="12" size-md="12" size-xl="3">
-			<ion-list-header class="ion-no-padding">
-				<ion-label color="primary">{{ 'Product list' | translate }}</ion-label>
-			</ion-list-header>
-			<div>
-				<!-- <ion-button fill="clear" size="small">
+<div class="main-view">
+	<div class="row-full shadow full-screen ion-padding">
+		<form [formGroup]="formGroup">
+			<ion-row class="hr-group">
+				<ion-col size="12" size-sm="12" size-md="12" size-xl="3">
+					<ion-list-header class="ion-no-padding">
+						<ion-label color="primary">{{ 'Product list' | translate }}</ion-label>
+					</ion-list-header>
+					<div>
+						<!-- <ion-button fill="clear" size="small">
 					<ion-icon slot="start" name="cloud-upload"></ion-icon>
 					{{ 'Import product/price list' | translate }}
 				</ion-button> -->
-				<ion-button fill="clear" size="small" (click)="onClickImport()">
-					<ion-icon slot="start" name="cloud-upload"></ion-icon>
-					{{ 'Import product' | translate }}
-				</ion-button>
-				<ion-button fill="clear" size="small" (click)="export()">
-					<ion-icon slot="start" name="cloud-download"></ion-icon>
-					{{ 'Export product' | translate }}
-				</ion-button>
-				<ion-button fill="clear" size="small" (click)="nav('/price-list/' + idPriceList, 'forward')">
-					<ion-icon slot="start" name="pricetag-outline"></ion-icon>
-					{{ 'Open price list' | translate }}
-				</ion-button>
-			</div>
-		</ion-col>
-		<ion-col size="12" size-sm size-xl="8">
-			<div class="table-contain">
-				<section class="table">
-					<header class="bold" style="padding-right: 0">
-						<div class="col-checkbox cell"></div>
-						<div class="col-id cell">{{ 'Id' | translate }}</div>
-						<div class="col-code cell">
-							{{ 'Product code' | translate }}
-						</div>
-						<div class="col-name cell">
-							{{ 'Product name' | translate }}
-						</div>
-						<!-- <div class="col-money cell">
-							{{ 'Price' | translate }}
-						</div> -->
-						<div class="col-icon cell">
-							<ion-button fill="clear" (click)="openItemModel()">
-								<ion-icon slot="icon-only" name="add"></ion-icon>
-							</ion-button>
-						</div>
-						<div class="col-icon cell">
-							<ion-button fill="clear" (click)="deleteSelectedRows()">
-								<ion-icon slot="icon-only" name="trash"></ion-icon>
-							</ion-button>
-						</div>
-					</header>
-					<ng-container formArrayName="Items" *ngIf="!pageConfig.showSpinner">
-						<div class="row" [ngClass]="{ odd: j % 2 != 0 }" *ngFor="let c of formGroup.get('Items')['controls']; let j = index">
-							<ng-container [formGroup]="c">
-								<div class="col-checkbox cell">
-									<input class="c-checkbox" type="checkbox" formControlName="Checked" />
-								</div>
-								<div class="col-id cell">
-									<a [routerLink]="['/item/' + c.controls._Item.value.Id]">{{ c.controls._Item.value.Id }}</a>
-								</div>
+						<ion-button fill="clear" size="small" (click)="onClickImport()">
+							<ion-icon slot="start" name="cloud-upload"></ion-icon>
+							{{ 'Import product' | translate }}
+						</ion-button>
+						<ion-button fill="clear" size="small" (click)="export()">
+							<ion-icon slot="start" name="cloud-download"></ion-icon>
+							{{ 'Export product' | translate }}
+						</ion-button>
+						<ion-button fill="clear" size="small" (click)="nav('/price-list/' + idPriceList, 'forward')">
+							<ion-icon slot="start" name="pricetag-outline"></ion-icon>
+							{{ 'Open price list' | translate }}
+						</ion-button>
+					</div>
+				</ion-col>
+				<ion-col size="12" size-sm size-xl="8">
+					<div class="table-contain">
+						<section class="table">
+							<header class="bold" style="padding-right: 0">
+								<div class="col-checkbox cell"></div>
+								<div class="col-id cell">{{ 'Id' | translate }}</div>
 								<div class="col-code cell">
-									{{ c.controls._Item.value.Code }}
+									{{ 'Product code' | translate }}
 								</div>
 								<div class="col-name cell">
-									{{ c.controls._Item.value.Name }}
+									{{ 'Product name' | translate }}
 								</div>
+								<!-- <div class="col-money cell">
+							{{ 'Price' | translate }}
+						</div> -->
 								<div class="col-icon cell">
-									<ion-button fill="clear" size="small" *ngIf="pageConfig.canEdit" (click)="removeItem(j)" title="{{ 'Delete' | translate }}">
-										<ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+									<ion-button fill="clear" (click)="openItemModel()">
+										<ion-icon slot="icon-only" name="add"></ion-icon>
 									</ion-button>
 								</div>
+								<div class="col-icon cell">
+									<ion-button fill="clear" (click)="deleteSelectedRows()">
+										<ion-icon slot="icon-only" name="trash"></ion-icon>
+									</ion-button>
+								</div>
+							</header>
+							<ng-container formArrayName="Items" *ngIf="!pageConfig.showSpinner">
+								<div class="row" [ngClass]="{ odd: j % 2 != 0 }" *ngFor="let c of formGroup.get('Items')['controls']; let j = index">
+									<ng-container [formGroup]="c">
+										<div class="col-checkbox cell">
+											<input class="c-checkbox" type="checkbox" formControlName="Checked" />
+										</div>
+										<div class="col-id cell">
+											<a [routerLink]="['/item/' + c.controls._Item.value.Id]">{{ c.controls._Item.value.Id }}</a>
+										</div>
+										<div class="col-code cell">
+											{{ c.controls._Item.value.Code }}
+										</div>
+										<div class="col-name cell">
+											{{ c.controls._Item.value.Name }}
+										</div>
+										<div class="col-icon cell">
+											<ion-button fill="clear" size="small" *ngIf="pageConfig.canEdit" (click)="removeItem(j)" title="{{ 'Delete' | translate }}">
+												<ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+											</ion-button>
+										</div>
+									</ng-container>
+								</div>
 							</ng-container>
-						</div>
-					</ng-container>
-				</section>
+						</section>
 
-				<ion-button size="small" fill="outline" (click)="openItemModel()"> <ion-icon slot="start" name="add"></ion-icon>{{ 'Add items' | translate }} </ion-button>
-			</div>
-		</ion-col>
-	</ion-row>
-	<input class="hide-all" #importfile type="file" [accept]="AcceptFile" (change)="importFileChange($event)" />
-</form>
+						<ion-button size="small" fill="outline" (click)="openItemModel()"> <ion-icon slot="start" name="add"></ion-icon>{{ 'Add items' | translate }} </ion-button>
+					</div>
+				</ion-col>
+			</ion-row>
+			<input class="hide-all" #importfile type="file" [accept]="AcceptFile" (change)="importFileChange($event)" />
+		</form>
+	</div>
+</div>
